sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupEnginesGetSample.js][backupenginesgetsample]                                                           | Returns backup management server registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Dpm/BackupEngines_Get.json                                                                                                                                                                                                                                                                                                                                                             |
| [backupEnginesListSample.js][backupengineslistsample]                                                         | Backup management servers registered to Recovery Services Vault. Returns a pageable list of servers. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Dpm/BackupEngines_List.json                                                                                                                                                                                                                                                                                                                               |
| [backupJobsListSample.js][backupjobslistsample]                                                               | Provides a pageable list of jobs. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/ListJobs.json                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupOperationResultsGetSample.js][backupoperationresultsgetsample]                                         | Provides the status of the delete operations such as deleting backed up item. Once the operation has started, the status code in the response would be Accepted. It will continue to be in this state till it reaches completion. On successful completion, the status code will be OK. This method expects OperationID as an argument. OperationID is part of the Location header of the operation response. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/ProtectedItem_Delete_OperationResult.json |
| [backupOperationStatusesGetSample.js][backupoperationstatusesgetsample]                                       | Fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs when the operation is complete. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/ProtectedItem_Delete_OperationStatus.json                                                                                         |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                                       | Lists of backup policies associated with Recovery Services Vault. API provides pagination parameters to fetch scoped results. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/BackupPolicies_List.json                                                                                                                                                                                                                                                                                             |
| [backupProtectableItemsListSample.js][backupprotectableitemslistsample]                                       | Provides a pageable list of protectable objects within your subscription according to the query filter and the pagination parameters. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/BackupProtectableItems_List.json                                                                                                                                                                                                                                                                             |
| [backupProtectedItemsListSample.js][backupprotecteditemslistsample]                                           | Provides a pageable list of all items that are backed up within a vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/BackupProtectedItems_List.json                                                                                                                                                                                                                                                                                                                                            |
| [backupProtectionContainersListSample.js][backupprotectioncontainerslistsample]                               | Lists the containers registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectionContainers_List.json                                                                                                                                                                                                                                                                                                                                                        |
| [backupProtectionIntentListSample.js][backupprotectionintentlistsample]                                       | Provides a pageable list of all intents that are present within a vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/BackupProtectionIntent_List.json                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceEncryptionConfigsGetSample.js][backupresourceencryptionconfigsgetsample]                       | Fetches Vault Encryption config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupResourceEncryptionConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceEncryptionConfigsUpdateSample.js][backupresourceencryptionconfigsupdatesample]                 | Updates Vault encryption config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupResourceEncryptionConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceStorageConfigsNonCrrGetSample.js][backupresourcestorageconfigsnoncrrgetsample]                 | Fetches resource storage config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupStorageConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                           |
| [backupResourceStorageConfigsNonCrrPatchSample.js][backupresourcestorageconfigsnoncrrpatchsample]             | Updates vault storage model type. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupStorageConfig_Patch.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceStorageConfigsNonCrrUpdateSample.js][backupresourcestorageconfigsnoncrrupdatesample]           | Updates vault storage model type. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupStorageConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupResourceVaultConfigsGetSample.js][backupresourcevaultconfigsgetsample]                                 | Fetches resource vault config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupResourceVaultConfigs_Get.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsPutSample.js][backupresourcevaultconfigsputsample]                                 | Updates vault security config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupResourceVaultConfigs_Put.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsUpdateSample.js][backupresourcevaultconfigsupdatesample]                           | Updates vault security config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupResourceVaultConfigs_Patch.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [backupStatusGetSample.js][backupstatusgetsample]                                                             | Get the container backup status x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/GetBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupUsageSummariesListSample.js][backupusagesummarieslistsample]                                           | Fetches the backup management usage summaries of the vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupProtectionContainers_UsageSummary_Get.json                                                                                                                                                                                                                                                                                                                                            |
| [backupWorkloadItemsListSample.js][backupworkloaditemslistsample]                                             | Provides a pageable list of workload item of a specific container according to the query filter and the pagination parameters. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/BackupWorkloadItems_List.json                                                                                                                                                                                                                                                                                     |
| [backupsTriggerSample.js][backupstriggersample]                                                               | Triggers backup for specified backed up item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/TriggerBackup_Post.json                                                                                                                                                                                                                                                                 |
| [bmsPrepareDataMoveOperationResultGetSample.js][bmspreparedatamoveoperationresultgetsample]                   | Fetches Operation Result for Prepare Data Move x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupDataMove/PrepareDataMoveOperationResult_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [bmsPrepareDataMoveSample.js][bmspreparedatamovesample]                                                       | Prepares source vault for Data Move operation x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupDataMove/PrepareDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                         |
| [bmsTriggerDataMoveSample.js][bmstriggerdatamovesample]                                                       | Triggers Data Move Operation on target vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupDataMove/TriggerDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                          |
| [deletedProtectionContainersListSample.js][deletedprotectioncontainerslistsample]                             | Lists the soft deleted containers registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/SoftDeletedContainers_List.json                                                                                                                                                                                                                                                                                                                                          |
| [exportJobsOperationResultsGetSample.js][exportjobsoperationresultsgetsample]                                 | Gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/ExportJobsOperationResult.json                                                                                                                                                                                    |
| [featureSupportValidateSample.js][featuresupportvalidatesample]                                               | It will validate if given feature with resource properties is supported in service x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/BackupFeature_Validate.json                                                                                                                                                                                                                                                                                                                                     |
| [getOperationStatusSample.js][getoperationstatussample]                                                       | Fetches operation status for data move operation on vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/BackupDataMove/BackupDataMoveOperationStatus_Get.json                                                                                                                                                                                                                                                                                                                                                |
| [itemLevelRecoveryConnectionsProvisionSample.js][itemlevelrecoveryconnectionsprovisionsample]                 | Provisions a script which invokes an iSCSI connection to the backup data. Executing this script opens a file explorer displaying all the recoverable files and folders. This is an asynchronous operation. To know the status of provisioning, call GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/Provision_Ilr.json                                                                                                                                        |
| [itemLevelRecoveryConnectionsRevokeSample.js][itemlevelrecoveryconnectionsrevokesample]                       | Revokes an iSCSI connection which can be used to download a script. Executing this script opens a file explorer displaying all recoverable files and folders. This is an asynchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/Revoke_Ilr.json                                                                                                                                                                                                                                   |
| [jobCancellationsTriggerSample.js][jobcancellationstriggersample]                                             | Cancels a job. This is an asynchronous operation. To know the status of the cancellation, call GetCancelOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/TriggerCancelJob.json                                                                                                                                                                                                                                                                                                      |
| [jobDetailsGetSample.js][jobdetailsgetsample]                                                                 | Gets extended information associated with the job. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/GetJobDetails.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [jobOperationResultsGetSample.js][joboperationresultsgetsample]                                               | Fetches the result of any operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/CancelJobOperationResult.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [jobsExportSample.js][jobsexportsample]                                                                       | Triggers export of jobs specified by filters and returns an OperationID to track. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/TriggerExportJobs.json                                                                                                                                                                                                                                                                                                                                                |
| [moveRecoveryPointSample.js][moverecoverypointsample]                                                         | Move recovery point from one datastore to another store. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/TriggerRecoveryPointMove_Post.json                                                                                                                                                                                                                                                                                                                                                                    |
| [operationValidateSample.js][operationvalidatesample]                                                         | Validate operation for specified backed up item. This is a synchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ValidateOperation_RestoreDisk.json                                                                                                                                                                                                                                                                                                                               |
| [operationsListSample.js][operationslistsample]                                                               | Returns the list of available operations. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                  |
| [privateEndpointConnectionDeleteSample.js][privateendpointconnectiondeletesample]                             | Delete Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/PrivateEndpointConnection/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                            |
| [privateEndpointConnectionGetSample.js][privateendpointconnectiongetsample]                                   | Get Private Endpoint Connection. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/PrivateEndpointConnection/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionPutSample.js][privateendpointconnectionputsample]                                   | Approve or Reject Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/PrivateEndpointConnection/PutPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointGetOperationStatusSample.js][privateendpointgetoperationstatussample]                         | Gets the operation status for a private endpoint connection. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/PrivateEndpointConnection/GetPrivateEndpointConnectionOperationStatus.json                                                                                                                                                                                                                                                                                                                        |
| [protectableContainersListSample.js][protectablecontainerslistsample]                                         | Lists the containers that can be registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectableContainers_List.json                                                                                                                                                                                                                                                                                                                                           |
| [protectedItemOperationResultsGetSample.js][protecteditemoperationresultsgetsample]                           | Fetches the result of any operation on the backup item. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectedItemOperationResults.json                                                                                                                                                                                                                                                                                                                                                         |
| [protectedItemOperationStatusesGetSample.js][protecteditemoperationstatusesgetsample]                         | Fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. Some operations create jobs. This method returns the list of jobs associated with the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectedItemOperationStatus.json                                                                                            |
| [protectedItemsCreateOrUpdateSample.js][protecteditemscreateorupdatesample]                                   | Enables backup of an item or to modifies the backup policy information of an already backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ConfigureProtection.json                                                                                                                                                                                                         |
| [protectedItemsDeleteSample.js][protecteditemsdeletesample]                                                   | Used to disable backup of an item within a container. This is an asynchronous operation. To know the status of the request, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/ProtectedItem_Delete.json                                                                                                                                                                                                                                                              |
| [protectedItemsGetSample.js][protecteditemsgetsample]                                                         | Provides the details of the backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ClassicCompute_ProtectedItem_Get.json                                                                                                                                                                                                                                                     |
| [protectionContainerOperationResultsGetSample.js][protectioncontaineroperationresultsgetsample]               | Fetches the result of any operation on the container. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectionContainers_Inquire_Result.json                                                                                                                                                                                                                                                                                                                                                    |
| [protectionContainerRefreshOperationResultsGetSample.js][protectioncontainerrefreshoperationresultsgetsample] | Provides the result of the refresh operation triggered by the BeginRefresh operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/RefreshContainers_OperationResults.json                                                                                                                                                                                                                                                                                                                           |
| [protectionContainersGetSample.js][protectioncontainersgetsample]                                             | Gets details of the specific container registered to your Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/ProtectionContainers_Get.json                                                                                                                                                                                                                                                                                                                                 |
| [protectionContainersInquireSample.js][protectioncontainersinquiresample]                                     | This is an async operation and the results should be tracked using location header or Azure-async-url. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectionContainers_Inquire.json                                                                                                                                                                                                                                                                                                          |
| [protectionContainersRefreshSample.js][protectioncontainersrefreshsample]                                     | Discovers all the containers in the subscription that can be backed up to Recovery Services Vault. This is an asynchronous operation. To know the status of the operation, call GetRefreshOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/RefreshContainers.json                                                                                                                                                                                                                   |
| [protectionContainersRegisterSample.js][protectioncontainersregistersample]                                   | Registers the container with Recovery Services vault. This is an asynchronous operation. To track the operation status, use location header to call get latest status of the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectionContainers_Register.json                                                                                                                                                                                                                        |
| [protectionContainersUnregisterSample.js][protectioncontainersunregistersample]                               | Unregisters the given container from your Recovery Services Vault. This is an asynchronous operation. To determine whether the backend service has finished processing the request, call Get Container Operation Result API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/ProtectionContainers_Unregister.json                                                                                                                                                                                |
| [protectionIntentCreateOrUpdateSample.js][protectionintentcreateorupdatesample]                               | Create Intent for Enabling backup of an item. This is a synchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectionIntent_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                |
| [protectionIntentDeleteSample.js][protectionintentdeletesample]                                               | Used to remove intent from an item x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/BackupProtectionIntent_Delete.json                                                                                                                                                                                                                                                                                                                                                                            |
| [protectionIntentGetSample.js][protectionintentgetsample]                                                     | Provides the details of the protection intent up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureWorkload/BackupProtectionIntent_Get.json                                                                                                                                                                                                                                              |
| [protectionIntentValidateSample.js][protectionintentvalidatesample]                                           | It will validate followings 1. Vault capacity 2. VM is already protected 3. Any VM related configuration passed in properties. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectionIntent_Validate.json                                                                                                                                                                                                                                                                                      |
| [protectionPoliciesCreateOrUpdateSample.js][protectionpoliciescreateorupdatesample]                           | Creates or modifies a backup policy. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureStorage/ProtectionPolicies_CreateOrUpdate_Daily.json                                                                                                                                                                                                                                                   |
| [protectionPoliciesDeleteSample.js][protectionpoliciesdeletesample]                                           | Deletes specified backup policy from your Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetProtectionPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectionPolicies_Delete.json                                                                                                                                                                                                                          |
| [protectionPoliciesGetSample.js][protectionpoliciesgetsample]                                                 | Provides the details of the backup policies associated to Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/V2Policy/v2-Get-Policy.json                                                                                                                                                                                                                       |
| [protectionPolicyOperationResultsGetSample.js][protectionpolicyoperationresultsgetsample]                     | Provides the result of an operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectionPolicyOperationResults_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [protectionPolicyOperationStatusesGetSample.js][protectionpolicyoperationstatusesgetsample]                   | Provides the status of the asynchronous operations like backup, restore. The status can be in progress, completed or failed. You can refer to the Operation Status enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs associated with operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ProtectionPolicyOperationStatuses_Get.json                                                                                       |
| [recoveryPointsGetSample.js][recoverypointsgetsample]                                                         | Provides the information of the backed up data identified using RecoveryPointID. This is an asynchronous operation. To know the status of the operation, call the GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/RecoveryPoints_Get.json                                                                                                                                                                                                                     |
| [recoveryPointsListSample.js][recoverypointslistsample]                                                       | Lists the backup copies for the backed up item. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/RecoveryPoints_List.json                                                                                                                                                                                                                                                                                                                                                                           |
| [recoveryPointsRecommendedForMoveListSample.js][recoverypointsrecommendedformovelistsample]                   | Lists the recovery points recommended for move to another tier x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/RecoveryPointsRecommendedForMove_List.json                                                                                                                                                                                                                                                                                                                                          |
| [resourceGuardProxiesGetSample.js][resourceguardproxiesgetsample]                                             | List the ResourceGuardProxies under vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                   |
| [resourceGuardProxyDeleteSample.js][resourceguardproxydeletesample]                                           | Delete ResourceGuardProxy under vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                     |
| [resourceGuardProxyGetSample.js][resourceguardproxygetsample]                                                 | Returns ResourceGuardProxy under vault and with the name referenced in request x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyPutSample.js][resourceguardproxyputsample]                                                 | Add or Update ResourceGuardProxy under vault Secures vault critical operations x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyUnlockDeleteSample.js][resourceguardproxyunlockdeletesample]                               | Secures delete ResourceGuardProxy operations. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                       |
| [restoresTriggerSample.js][restorestriggersample]                                                             | Restores the specified backed up data. This is an asynchronous operation. To know the status of this API call, use GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/TriggerRestore_RestoreDisks_IaasVMRestoreRequest.json                                                                                                                                                                                                                                      |
| [securityPiNsGetSample.js][securitypinsgetsample]                                                             | Get the security PIN. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/Common/BackupSecurityPin_Get.json                                                                                                                                                                                                                                                                                                                                                                                                        |
| [validateOperationResultsGetSample.js][validateoperationresultsgetsample]                                     | Fetches the result of a triggered validate operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ValidateOperationResults.json                                                                                                                                                                                                                                                                                                                                                                |
| [validateOperationStatusesGetSample.js][validateoperationstatusesgetsample]                                   | Fetches the status of a triggered validate operation. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. If operation has completed, this method returns the list of errors obtained while validating the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/ValidateOperationStatus.json                                                                                                         |
| [validateOperationTriggerSample.js][validateoperationtriggersample]                                           | Validate operation for specified backed up item in the form of an asynchronous operation. Returns tracking headers which can be tracked using GetValidateOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-02-01/examples/AzureIaasVm/TriggerValidateOperation_RestoreDisk.json                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node backupEnginesGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env RECOVERYSERVICESBACKUP_SUBSCRIPTION_ID="<recoveryservicesbackup subscription id>" RECOVERYSERVICESBACKUP_RESOURCE_GROUP="<recoveryservicesbackup resource group>" node backupEnginesGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupenginesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupEnginesGetSample.js
[backupengineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupEnginesListSample.js
[backupjobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupJobsListSample.js
[backupoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupOperationResultsGetSample.js
[backupoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupOperationStatusesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupPoliciesListSample.js
[backupprotectableitemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupProtectableItemsListSample.js
[backupprotecteditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupProtectedItemsListSample.js
[backupprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupProtectionContainersListSample.js
[backupprotectionintentlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupProtectionIntentListSample.js
[backupresourceencryptionconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceEncryptionConfigsGetSample.js
[backupresourceencryptionconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceEncryptionConfigsUpdateSample.js
[backupresourcestorageconfigsnoncrrgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceStorageConfigsNonCrrGetSample.js
[backupresourcestorageconfigsnoncrrpatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceStorageConfigsNonCrrPatchSample.js
[backupresourcestorageconfigsnoncrrupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceStorageConfigsNonCrrUpdateSample.js
[backupresourcevaultconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceVaultConfigsGetSample.js
[backupresourcevaultconfigsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceVaultConfigsPutSample.js
[backupresourcevaultconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupResourceVaultConfigsUpdateSample.js
[backupstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupStatusGetSample.js
[backupusagesummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupUsageSummariesListSample.js
[backupworkloaditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupWorkloadItemsListSample.js
[backupstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/backupsTriggerSample.js
[bmspreparedatamoveoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/bmsPrepareDataMoveOperationResultGetSample.js
[bmspreparedatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/bmsPrepareDataMoveSample.js
[bmstriggerdatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/bmsTriggerDataMoveSample.js
[deletedprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/deletedProtectionContainersListSample.js
[exportjobsoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/exportJobsOperationResultsGetSample.js
[featuresupportvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/featureSupportValidateSample.js
[getoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/getOperationStatusSample.js
[itemlevelrecoveryconnectionsprovisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/itemLevelRecoveryConnectionsProvisionSample.js
[itemlevelrecoveryconnectionsrevokesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/itemLevelRecoveryConnectionsRevokeSample.js
[jobcancellationstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/jobCancellationsTriggerSample.js
[jobdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/jobDetailsGetSample.js
[joboperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/jobOperationResultsGetSample.js
[jobsexportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/jobsExportSample.js
[moverecoverypointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/moveRecoveryPointSample.js
[operationvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/operationValidateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/operationsListSample.js
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/privateEndpointConnectionDeleteSample.js
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/privateEndpointConnectionGetSample.js
[privateendpointconnectionputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/privateEndpointConnectionPutSample.js
[privateendpointgetoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/privateEndpointGetOperationStatusSample.js
[protectablecontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectableContainersListSample.js
[protecteditemoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectedItemOperationResultsGetSample.js
[protecteditemoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectedItemOperationStatusesGetSample.js
[protecteditemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectedItemsCreateOrUpdateSample.js
[protecteditemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectedItemsDeleteSample.js
[protecteditemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectedItemsGetSample.js
[protectioncontaineroperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainerOperationResultsGetSample.js
[protectioncontainerrefreshoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainerRefreshOperationResultsGetSample.js
[protectioncontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainersGetSample.js
[protectioncontainersinquiresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainersInquireSample.js
[protectioncontainersrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainersRefreshSample.js
[protectioncontainersregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainersRegisterSample.js
[protectioncontainersunregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionContainersUnregisterSample.js
[protectionintentcreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionIntentCreateOrUpdateSample.js
[protectionintentdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionIntentDeleteSample.js
[protectionintentgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionIntentGetSample.js
[protectionintentvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionIntentValidateSample.js
[protectionpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionPoliciesCreateOrUpdateSample.js
[protectionpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionPoliciesDeleteSample.js
[protectionpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionPoliciesGetSample.js
[protectionpolicyoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionPolicyOperationResultsGetSample.js
[protectionpolicyoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/protectionPolicyOperationStatusesGetSample.js
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/recoveryPointsGetSample.js
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/recoveryPointsListSample.js
[recoverypointsrecommendedformovelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/recoveryPointsRecommendedForMoveListSample.js
[resourceguardproxiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/resourceGuardProxiesGetSample.js
[resourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/resourceGuardProxyDeleteSample.js
[resourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/resourceGuardProxyGetSample.js
[resourceguardproxyputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/resourceGuardProxyPutSample.js
[resourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/resourceGuardProxyUnlockDeleteSample.js
[restorestriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/restoresTriggerSample.js
[securitypinsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/securityPiNsGetSample.js
[validateoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/validateOperationResultsGetSample.js
[validateoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/validateOperationStatusesGetSample.js
[validateoperationtriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/javascript/validateOperationTriggerSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-recoveryservicesbackup?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/README.md
