sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/README.md
# @azure/arm-recoveryservicesbackup client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-recoveryservicesbackup in some common scenarios.

| **File Name**                                                                                                                                           | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [bMSPrepareDataMoveOperationResultGetSample.js][bmspreparedatamoveoperationresultgetsample]                                                             | fetches operation status for data move operation on vault x-ms-original-file: 2026-08-01/BackupDataMove/PrepareDataMoveOperationResult_Get.json                                                                                                                                                                                                                                                                                                                                               |
| [backupEnginesGetSample.js][backupenginesgetsample]                                                                                                     | returns backup management server registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/Dpm/BackupEngines_Get.json                                                                                                                                                                                                                                                                                                                                                             |
| [backupEnginesListSample.js][backupengineslistsample]                                                                                                   | backup management servers registered to Recovery Services Vault. Returns a pageable list of servers. x-ms-original-file: 2026-08-01/Dpm/BackupEngines_List.json                                                                                                                                                                                                                                                                                                                               |
| [backupJobsListSample.js][backupjobslistsample]                                                                                                         | provides a pageable list of jobs. x-ms-original-file: 2026-08-01/Common/ListJobs.json                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupOperationResultsGetSample.js][backupoperationresultsgetsample]                                                                                   | provides the status of the delete operations such as deleting backed up item. Once the operation has started, the status code in the response would be Accepted. It will continue to be in this state till it reaches completion. On successful completion, the status code will be OK. This method expects OperationID as an argument. OperationID is part of the Location header of the operation response. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete_OperationResult.json |
| [backupOperationStatusesGetSample.js][backupoperationstatusesgetsample]                                                                                 | fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs when the operation is complete. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete_OperationStatus.json                                                                                         |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                                                                                 | lists of backup policies associated with Recovery Services Vault. API provides pagination parameters to fetch scoped results. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupPolicies_List.json                                                                                                                                                                                                                                                                                             |
| [backupProtectableItemsListSample.js][backupprotectableitemslistsample]                                                                                 | provides a pageable list of protectable objects within your subscription according to the query filter and the pagination parameters. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupProtectableItems_List.json                                                                                                                                                                                                                                                                             |
| [backupProtectedItemsListSample.js][backupprotecteditemslistsample]                                                                                     | provides a pageable list of all items that are backed up within a vault. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupProtectedItems_List.json                                                                                                                                                                                                                                                                                                                                            |
| [backupProtectionContainersListSample.js][backupprotectioncontainerslistsample]                                                                         | lists the containers registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_List.json                                                                                                                                                                                                                                                                                                                                                        |
| [backupProtectionIntentListSample.js][backupprotectionintentlistsample]                                                                                 | provides a pageable list of all intents that are present within a vault. x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_List.json                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceEncryptionConfigsGetSample.js][backupresourceencryptionconfigsgetsample]                                                                 | fetches Vault Encryption config. x-ms-original-file: 2026-08-01/BackupResourceEncryptionConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceEncryptionConfigsUpdateSample.js][backupresourceencryptionconfigsupdatesample]                                                           | updates Vault encryption config. x-ms-original-file: 2026-08-01/BackupResourceEncryptionConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceStorageConfigsNonCRRGetSample.js][backupresourcestorageconfigsnoncrrgetsample]                                                           | fetches resource storage config. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                           |
| [backupResourceStorageConfigsNonCRRPatchSample.js][backupresourcestorageconfigsnoncrrpatchsample]                                                       | updates vault storage model type. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Patch.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceStorageConfigsNonCRRUpdateSample.js][backupresourcestorageconfigsnoncrrupdatesample]                                                     | updates vault storage model type. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupResourceVaultConfigsGetSample.js][backupresourcevaultconfigsgetsample]                                                                           | fetches resource vault config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Get.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsPutSample.js][backupresourcevaultconfigsputsample]                                                                           | updates vault security config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Put.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsUpdateSample.js][backupresourcevaultconfigsupdatesample]                                                                     | updates vault security config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Patch.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [backupStatusGetSample.js][backupstatusgetsample]                                                                                                       | get the container backup status x-ms-original-file: 2026-08-01/AzureIaasVm/GetBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupUsageSummariesListSample.js][backupusagesummarieslistsample]                                                                                     | fetches the backup management usage summaries of the vault. x-ms-original-file: 2026-08-01/Common/BackupProtectedItem_UsageSummary_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [backupWorkloadItemsListSample.js][backupworkloaditemslistsample]                                                                                       | provides a pageable list of workload item of a specific container according to the query filter and the pagination parameters. x-ms-original-file: 2026-08-01/AzureWorkload/BackupWorkloadItems_List.json                                                                                                                                                                                                                                                                                     |
| [backupsTriggerSample.js][backupstriggersample]                                                                                                         | triggers backup for specified backed up item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/Common/TriggerBackup_Post.json                                                                                                                                                                                                                                                                 |
| [bmsPrepareDataMoveSample.js][bmspreparedatamovesample]                                                                                                 | prepares source vault for Data Move operation x-ms-original-file: 2026-08-01/BackupDataMove/PrepareDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                         |
| [bmsTriggerDataMoveSample.js][bmstriggerdatamovesample]                                                                                                 | triggers Data Move Operation on target vault x-ms-original-file: 2026-08-01/BackupDataMove/TriggerDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                          |
| [configureSourceScanExecuteSample.js][configuresourcescanexecutesample]                                                                                 | configures source scan for a protected item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ConfigureSourceScan.json                                                                                                                                                                                                                                                            |
| [deletedProtectionContainersListSample.js][deletedprotectioncontainerslistsample]                                                                       | lists the soft deleted containers registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/SoftDeletedContainers_List.json                                                                                                                                                                                                                                                                                                                                          |
| [exportJobsOperationResultsGetSample.js][exportjobsoperationresultsgetsample]                                                                           | gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: 2026-08-01/Common/ExportJobsOperationResult.json                                                                                                                                                                                    |
| [featureSupportValidateSample.js][featuresupportvalidatesample]                                                                                         | it will validate if given feature with resource properties is supported in service x-ms-original-file: 2026-08-01/AzureIaasVm/BackupFeature_Validate.json                                                                                                                                                                                                                                                                                                                                     |
| [fetchTieringCostPostSample.js][fetchtieringcostpostsample]                                                                                             | provides the details of the tiering related sizes and cost. Status of the operation can be fetched using GetTieringCostOperationStatus API and result using GetTieringCostOperationResult API. x-ms-original-file: 2026-08-01/TieringCost/FetchTieringCostForPolicy.json                                                                                                                                                                                                                      |
| [getOperationStatusSample.js][getoperationstatussample]                                                                                                 | fetches Operation Result for Prepare Data Move x-ms-original-file: 2026-08-01/BackupDataMove/BackupDataMoveOperationStatus_Get.json                                                                                                                                                                                                                                                                                                                                                           |
| [getTieringCostOperationResultGetSample.js][gettieringcostoperationresultgetsample]                                                                     | gets the result of async operation for tiering cost x-ms-original-file: 2026-08-01/TieringCost/GetTieringCostOperationResult.json                                                                                                                                                                                                                                                                                                                                                             |
| [itemLevelRecoveryConnectionsListInstantItemRecoveryOperationResultSample.js][itemlevelrecoveryconnectionslistinstantitemrecoveryoperationresultsample] | fetches the mount scripts (iSCSI connection details) for an active Instant Item Recovery (ILR) session on the recovery point. Required from API version 2026-08-01 onwards; replaces the scripts previously returned inline in the operationsStatus (ILR provision) response. x-ms-original-file: 2026-08-01/AzureIaasVm/ListInstantItemRecoveryOperationResult.json                                                                                                                          |
| [itemLevelRecoveryConnectionsProvisionSample.js][itemlevelrecoveryconnectionsprovisionsample]                                                           | provisions a script which invokes an iSCSI connection to the backup data. Executing this script opens a file explorer displaying all the recoverable files and folders. This is an asynchronous operation. To know the status of provisioning, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/Provision_Ilr.json                                                                                                                                        |
| [itemLevelRecoveryConnectionsRevokeSample.js][itemlevelrecoveryconnectionsrevokesample]                                                                 | revokes an iSCSI connection which can be used to download a script. Executing this script opens a file explorer displaying all recoverable files and folders. This is an asynchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/Revoke_Ilr.json                                                                                                                                                                                                                                   |
| [jobCancellationsTriggerSample.js][jobcancellationstriggersample]                                                                                       | cancels a job. This is an asynchronous operation. To know the status of the cancellation, call GetCancelOperationResult API. x-ms-original-file: 2026-08-01/Common/TriggerCancelJob.json                                                                                                                                                                                                                                                                                                      |
| [jobDetailsGetSample.js][jobdetailsgetsample]                                                                                                           | gets extended information associated with the job. x-ms-original-file: 2026-08-01/Common/GetJobDetails.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [jobOperationResultsGetSample.js][joboperationresultsgetsample]                                                                                         | fetches the result of any operation. x-ms-original-file: 2026-08-01/Common/CancelJobOperationResult.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [jobsExportSample.js][jobsexportsample]                                                                                                                 | triggers export of jobs specified by filters and returns an OperationID to track. x-ms-original-file: 2026-08-01/Common/TriggerExportJobs.json                                                                                                                                                                                                                                                                                                                                                |
| [moveRecoveryPointSample.js][moverecoverypointsample]                                                                                                   | move recovery point from one datastore to another store. x-ms-original-file: 2026-08-01/TriggerRecoveryPointMove_Post.json                                                                                                                                                                                                                                                                                                                                                                    |
| [operationValidateSample.js][operationvalidatesample]                                                                                                   | validate operation for specified backed up item. This is a synchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperation_RestoreDisk.json                                                                                                                                                                                                                                                                                                                               |
| [operationsListSample.js][operationslistsample]                                                                                                         | list the operations for the provider x-ms-original-file: 2026-08-01/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                       |
| [privateEndpointConnectionOperationsDeleteSample.js][privateendpointconnectionoperationsdeletesample]                                                   | delete Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                            |
| [privateEndpointConnectionOperationsGetSample.js][privateendpointconnectionoperationsgetsample]                                                         | get Private Endpoint Connection. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionOperationsPutSample.js][privateendpointconnectionoperationsputsample]                                                         | approve or Reject Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/PutPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointOperationsGetOperationStatusSample.js][privateendpointoperationsgetoperationstatussample]                                               | gets the operation status for a private endpoint connection. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/GetPrivateEndpointConnectionOperationStatus.json                                                                                                                                                                                                                                                                                                                        |
| [protectableContainersListSample.js][protectablecontainerslistsample]                                                                                   | lists the containers that can be registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/ProtectableContainers_List.json                                                                                                                                                                                                                                                                                                                                           |
| [protectedItemOperationResultsGetSample.js][protecteditemoperationresultsgetsample]                                                                     | fetches the result of any operation on the backup item. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectedItemOperationResults.json                                                                                                                                                                                                                                                                                                                                                         |
| [protectedItemOperationStatusesGetSample.js][protecteditemoperationstatusesgetsample]                                                                   | fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. Some operations create jobs. This method returns the list of jobs associated with the operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectedItemOperationStatus.json                                                                                            |
| [protectedItemsCreateOrUpdateSample.js][protecteditemscreateorupdatesample]                                                                             | enables backup of an item or to modifies the backup policy information of an already backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ConfigureProtection.json                                                                                                                                                                                                         |
| [protectedItemsDeleteSample.js][protecteditemsdeletesample]                                                                                             | used to disable backup of an item within a container. This is an asynchronous operation. To know the status of the request, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete.json                                                                                                                                                                                                                                                              |
| [protectedItemsGetSample.js][protecteditemsgetsample]                                                                                                   | provides the details of the backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ClassicCompute_ProtectedItem_Get.json                                                                                                                                                                                                                                                     |
| [protectionContainerOperationResultsGetSample.js][protectioncontaineroperationresultsgetsample]                                                         | fetches the result of any operation on the container. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_Inquire_Result.json                                                                                                                                                                                                                                                                                                                                                    |
| [protectionContainerRefreshOperationResultsGetSample.js][protectioncontainerrefreshoperationresultsgetsample]                                           | provides the result of the refresh operation triggered by the BeginRefresh operation. x-ms-original-file: 2026-08-01/Common/RefreshContainers_OperationResults.json                                                                                                                                                                                                                                                                                                                           |
| [protectionContainersGetSample.js][protectioncontainersgetsample]                                                                                       | gets details of the specific container registered to your Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureWorkload/ProtectionContainers_Get.json                                                                                                                                                                                                                                                                                                                                 |
| [protectionContainersInquireSample.js][protectioncontainersinquiresample]                                                                               | this is an async operation and the results should be tracked using location header or Azure-async-url. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_Inquire.json                                                                                                                                                                                                                                                                                                          |
| [protectionContainersRefreshSample.js][protectioncontainersrefreshsample]                                                                               | discovers all the containers in the subscription that can be backed up to Recovery Services Vault. This is an asynchronous operation. To know the status of the operation, call GetRefreshOperationResult API. x-ms-original-file: 2026-08-01/Common/RefreshContainers.json                                                                                                                                                                                                                   |
| [protectionContainersRegisterSample.js][protectioncontainersregistersample]                                                                             | registers the container with Recovery Services vault. This is an asynchronous operation. To track the operation status, use location header to call get latest status of the operation. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_ReRegister_SwitchToSAMI.json                                                                                                                                                                                                         |
| [protectionContainersUnregisterSample.js][protectioncontainersunregistersample]                                                                         | unregisters the given container from your Recovery Services Vault. This is an asynchronous operation. To determine whether the backend service has finished processing the request, call Get Container Operation Result API. x-ms-original-file: 2026-08-01/AzureWorkload/ProtectionContainers_Unregister.json                                                                                                                                                                                |
| [protectionIntentOperationsCreateOrUpdateSample.js][protectionintentoperationscreateorupdatesample]                                                     | create Intent for Enabling backup of an item. This is a synchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionIntent_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                |
| [protectionIntentOperationsDeleteSample.js][protectionintentoperationsdeletesample]                                                                     | used to remove intent from an item x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_Delete.json                                                                                                                                                                                                                                                                                                                                                                            |
| [protectionIntentOperationsGetSample.js][protectionintentoperationsgetsample]                                                                           | provides the details of the protection intent up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_Get.json                                                                                                                                                                                                                                              |
| [protectionIntentOperationsValidateSample.js][protectionintentoperationsvalidatesample]                                                                 | it will validate followings 1. Vault capacity 2. VM is already protected 3. Any VM related configuration passed in properties. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionIntent_Validate.json                                                                                                                                                                                                                                                                                      |
| [protectionPoliciesCreateOrUpdateSample.js][protectionpoliciescreateorupdatesample]                                                                     | creates or modifies a backup policy. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_CreateOrUpdate_Complex.json                                                                                                                                                                                                                                                  |
| [protectionPoliciesDeleteSample.js][protectionpoliciesdeletesample]                                                                                     | deletes specified backup policy from your Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetProtectionPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_Delete.json                                                                                                                                                                                                                          |
| [protectionPoliciesGetSample.js][protectionpoliciesgetsample]                                                                                           | provides the details of the backup policies associated to Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_Get.json                                                                                                                                                                                                                       |
| [protectionPolicyOperationResultsGetSample.js][protectionpolicyoperationresultsgetsample]                                                               | provides the result of an operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicyOperationResults_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [protectionPolicyOperationStatusesGetSample.js][protectionpolicyoperationstatusesgetsample]                                                             | provides the status of the asynchronous operations like backup, restore. The status can be in progress, completed or failed. You can refer to the Operation Status enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs associated with operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicyOperationStatuses_Get.json                                                                                       |
| [recoveryPointsGetSample.js][recoverypointsgetsample]                                                                                                   | provides the information of the backed up data identified using RecoveryPointID. This is an asynchronous operation. To know the status of the operation, call the GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPoints_Get.json                                                                                                                                                                                                                     |
| [recoveryPointsListSample.js][recoverypointslistsample]                                                                                                 | lists the backup copies for the backed up item. x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPoints_List.json                                                                                                                                                                                                                                                                                                                                                                           |
| [recoveryPointsRecommendedForMoveListSample.js][recoverypointsrecommendedformovelistsample]                                                             | lists the recovery points recommended for move to another tier x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPointsRecommendedForMove_List.json                                                                                                                                                                                                                                                                                                                                          |
| [resourceGuardProxiesListSample.js][resourceguardproxieslistsample]                                                                                     | list the ResourceGuardProxies under vault x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                   |
| [resourceGuardProxyDeleteSample.js][resourceguardproxydeletesample]                                                                                     | delete ResourceGuardProxy under vault x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                     |
| [resourceGuardProxyGetSample.js][resourceguardproxygetsample]                                                                                           | returns ResourceGuardProxy under vault and with the name referenced in request x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyPutSample.js][resourceguardproxyputsample]                                                                                           | add or Update ResourceGuardProxy under vault Secures vault critical operations x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyUnlockDeleteSample.js][resourceguardproxyunlockdeletesample]                                                                         | secures delete ResourceGuardProxy operations. x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                       |
| [restoresTriggerSample.js][restorestriggersample]                                                                                                       | restores the specified backed up data. This is an asynchronous operation. To know the status of this API call, use GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/TriggerRestore_ALR_IaasVMRestoreRequest.json                                                                                                                                                                                                                                               |
| [securityPINsGetSample.js][securitypinsgetsample]                                                                                                       | get the security PIN. x-ms-original-file: 2026-08-01/Common/BackupSecurityPin_Get.json                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tieringCostOperationStatusGetSample.js][tieringcostoperationstatusgetsample]                                                                           | gets the status of async operations of tiering cost x-ms-original-file: 2026-08-01/TieringCost/GetTieringCostOperationStatus.json                                                                                                                                                                                                                                                                                                                                                             |
| [validateOperationResultsGetSample.js][validateoperationresultsgetsample]                                                                               | fetches the result of a triggered validate operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperationResults.json                                                                                                                                                                                                                                                                                                                                                                |
| [validateOperationStatusesGetSample.js][validateoperationstatusesgetsample]                                                                             | fetches the status of a triggered validate operation. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. If operation has completed, this method returns the list of errors obtained while validating the operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperationStatus.json                                                                                                         |
| [validateOperationTriggerSample.js][validateoperationtriggersample]                                                                                     | validate operation for specified backed up item in the form of an asynchronous operation. Returns tracking headers which can be tracked using GetValidateOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/TriggerValidateOperation_RestoreDisk.json                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node bMSPrepareDataMoveOperationResultGetSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node bMSPrepareDataMoveOperationResultGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[bmspreparedatamoveoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/bMSPrepareDataMoveOperationResultGetSample.js
[backupenginesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupEnginesGetSample.js
[backupengineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupEnginesListSample.js
[backupjobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupJobsListSample.js
[backupoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupOperationResultsGetSample.js
[backupoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupOperationStatusesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupPoliciesListSample.js
[backupprotectableitemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupProtectableItemsListSample.js
[backupprotecteditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupProtectedItemsListSample.js
[backupprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupProtectionContainersListSample.js
[backupprotectionintentlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupProtectionIntentListSample.js
[backupresourceencryptionconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceEncryptionConfigsGetSample.js
[backupresourceencryptionconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceEncryptionConfigsUpdateSample.js
[backupresourcestorageconfigsnoncrrgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceStorageConfigsNonCRRGetSample.js
[backupresourcestorageconfigsnoncrrpatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceStorageConfigsNonCRRPatchSample.js
[backupresourcestorageconfigsnoncrrupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceStorageConfigsNonCRRUpdateSample.js
[backupresourcevaultconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceVaultConfigsGetSample.js
[backupresourcevaultconfigsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceVaultConfigsPutSample.js
[backupresourcevaultconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupResourceVaultConfigsUpdateSample.js
[backupstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupStatusGetSample.js
[backupusagesummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupUsageSummariesListSample.js
[backupworkloaditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupWorkloadItemsListSample.js
[backupstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/backupsTriggerSample.js
[bmspreparedatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/bmsPrepareDataMoveSample.js
[bmstriggerdatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/bmsTriggerDataMoveSample.js
[configuresourcescanexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/configureSourceScanExecuteSample.js
[deletedprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/deletedProtectionContainersListSample.js
[exportjobsoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/exportJobsOperationResultsGetSample.js
[featuresupportvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/featureSupportValidateSample.js
[fetchtieringcostpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/fetchTieringCostPostSample.js
[getoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/getOperationStatusSample.js
[gettieringcostoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/getTieringCostOperationResultGetSample.js
[itemlevelrecoveryconnectionslistinstantitemrecoveryoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/itemLevelRecoveryConnectionsListInstantItemRecoveryOperationResultSample.js
[itemlevelrecoveryconnectionsprovisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/itemLevelRecoveryConnectionsProvisionSample.js
[itemlevelrecoveryconnectionsrevokesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/itemLevelRecoveryConnectionsRevokeSample.js
[jobcancellationstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/jobCancellationsTriggerSample.js
[jobdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/jobDetailsGetSample.js
[joboperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/jobOperationResultsGetSample.js
[jobsexportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/jobsExportSample.js
[moverecoverypointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/moveRecoveryPointSample.js
[operationvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/operationValidateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/operationsListSample.js
[privateendpointconnectionoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/privateEndpointConnectionOperationsDeleteSample.js
[privateendpointconnectionoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/privateEndpointConnectionOperationsGetSample.js
[privateendpointconnectionoperationsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/privateEndpointConnectionOperationsPutSample.js
[privateendpointoperationsgetoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/privateEndpointOperationsGetOperationStatusSample.js
[protectablecontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectableContainersListSample.js
[protecteditemoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectedItemOperationResultsGetSample.js
[protecteditemoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectedItemOperationStatusesGetSample.js
[protecteditemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectedItemsCreateOrUpdateSample.js
[protecteditemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectedItemsDeleteSample.js
[protecteditemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectedItemsGetSample.js
[protectioncontaineroperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainerOperationResultsGetSample.js
[protectioncontainerrefreshoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainerRefreshOperationResultsGetSample.js
[protectioncontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainersGetSample.js
[protectioncontainersinquiresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainersInquireSample.js
[protectioncontainersrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainersRefreshSample.js
[protectioncontainersregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainersRegisterSample.js
[protectioncontainersunregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionContainersUnregisterSample.js
[protectionintentoperationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionIntentOperationsCreateOrUpdateSample.js
[protectionintentoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionIntentOperationsDeleteSample.js
[protectionintentoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionIntentOperationsGetSample.js
[protectionintentoperationsvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionIntentOperationsValidateSample.js
[protectionpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionPoliciesCreateOrUpdateSample.js
[protectionpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionPoliciesDeleteSample.js
[protectionpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionPoliciesGetSample.js
[protectionpolicyoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionPolicyOperationResultsGetSample.js
[protectionpolicyoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/protectionPolicyOperationStatusesGetSample.js
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/recoveryPointsGetSample.js
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/recoveryPointsListSample.js
[recoverypointsrecommendedformovelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/recoveryPointsRecommendedForMoveListSample.js
[resourceguardproxieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/resourceGuardProxiesListSample.js
[resourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/resourceGuardProxyDeleteSample.js
[resourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/resourceGuardProxyGetSample.js
[resourceguardproxyputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/resourceGuardProxyPutSample.js
[resourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/resourceGuardProxyUnlockDeleteSample.js
[restorestriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/restoresTriggerSample.js
[securitypinsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/securityPINsGetSample.js
[tieringcostoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/tieringCostOperationStatusGetSample.js
[validateoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/validateOperationResultsGetSample.js
[validateoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/validateOperationStatusesGetSample.js
[validateoperationtriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/javascript/validateOperationTriggerSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-recoveryservicesbackup
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/README.md
